Aug 19 2002  2.5.2  Changed client/server protocol to not rely on C99/glibc
                     printf doubles.  Should fix display on BSD. (pedro)
Aug 18 2002  2.5.2  Moved netline to panelfront_display.cc
                    Fixed apm support for '-1' time error
                    Added wireless_client export to kismet_server
                    Added wireless_client counting column for panel UI
                    Added fflush to waypoint writing
                    Added sync() to file writing
                    Fixed group handling of clients
                    Added handling of probe requests as clients to fetch
                     transmission maxrate
                    Fixed finding of 0.0.0.0 client addresses
                    Added group range calculations to info window
                    ! Added forced suid priv drops - see kismet.conf (new 
                     option suiduser).  Even if started as root, Kismet will
                     drop privs to the specified user.  This is more secure.
                     It is a good thing.
                    Fixed 'nan' and 'inf' network ranges in details panel
Aug 16 2002  2.5.2  Fixed dumpfile.h to not generate warnings on GCC 3.2
                    ACPI battery support patches merged in (configure with
                     --enable-acpi) (Million and Juliano)
                    Split panelfront.cc into three files for compile speed
                     and memory concerns.
                    Fixed shadowed variable errors under gcc-3.2 -Wshadow
Aug 15 2002  2.5.2  Client tracking internals complete, aggregate IP range
                     calculations used to find network ranges, and networks
                     with only a single IP display all four octets.
                    Hopefully fixed ipkg creation, thanks to James McGlashan
Aug 14 2002  2.5.2  Preliminary detection of Lucent Outdoor Router equip
                     thanks to Steve's dumps.