@@ -28,8 +28,15 @@
 
 const uint8_t LOR_MAC[] = {0x01, 0x00, 0x00, 0x00, 0x20, 0xF6};
 const uint8_t NUL_MAC[] = {0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
+const uint8_t NETS_MAC[] = {0x01, 0x60, 0x1d, 0x00, 0x01, 0x00};
 
 const int LLC_OFFSET = 0;
+
+// "....All " is all we need to match at this offset.  We can change this later if we
+// seem to be getting false positives.  The longer the fingerprint, the more cycles we
+// burn trying to compare it.
+const uint8_t NETSTUMBLER_SIGNATURE[] = {0x00, 0x00, 0x00, 0x00, 0x41, 0x6C, 0x6C, 0x20};
+const uint8_t NETSTUMBER_OFFSET = 8;
 
 const uint8_t CISCO_SIGNATURE[] = {0xAA, 0xAA, 0x03, 0x00, 0x00, 0x0C, 0x20, 0x00};
 
