@@ -46,6 +46,7 @@ char *KismetHelpText[] = {
     "   a   Statistics",
     "   p   Dump packet type",
     "   f   Follow network center",
+    "   w   Track alerts",
     "   x   Close popup window",
     "",
     "   Q   Quit",
@@ -75,6 +76,7 @@ char *KismetHelpTextNarrow[] = {
     "   a   Statistics",
     "   p   Dump packet type",
     "   f   Follow network",
+    "   w   Track alerts",
     "   x   Close popup window",
     "",
     "   q   Quit",
