@@ -167,6 +167,7 @@ protected:
     int StatsPrinter(void *in_window);
     int PackPrinter(void *in_window);
     int GpsPrinter(void *in_window);
+    int AlertPrinter(void *in_window);
 
     // Keyboard handlers
     int MainInput(void *in_window, int in_chr);
@@ -181,6 +182,7 @@ protected:
     // Help has a generic handler
     int TextInput(void *in_window, int in_chr);
     int GpsInput(void *in_window, int in_chr);
+    int AlertInput(void *in_window, int in_chr);
 
     // Spawn a generic popup
     void SpawnWindow(string in_title, panel_printer in_print, key_handler in_input,
